# Fisher-Kolmogorov-equation-Capodanno-Grillo-Lovino

./: .gitignore  README.md
1D/: CMakeLists.txt
1D/scripts/: plot-solution.py
1D/src/: FisherKolmogorov1D.cpp  FisherKolmogorov1D.hpp  Heat.cpp  Heat.hpp  lab-06.cpp  main_1D.cpp
3D/: CMakeLists.txt
3D/scripts/: brain_script.geo
3D/src/: DiffusionTensor.hpp  FisherKolmogorov3D.cpp  FisherKolmogorov3D.hpp  HeatNonLinear.hpp  ParameterReader.hpp  main_3D.cpp
3D_convergence/: CMakeLists.txt
3D_convergence/scripts/: cube.geo
3D_convergence/src/: FisherKolmogorov3D.cpp  FisherKolmogorov3D.hpp  ParameterReader.hpp  main_3D.cpp
